--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
   <main class="cms-installer__wrapper">
     <div class="cms-installer__main">
-      <h2 id="title">Installer</h2>
+      <h2 id="title"></h2>
+      <div id="loader"></div>
       <p id="status"></p>
       <div id="open"></div>
-      <div id="loader"></div>
+
     </div>
   </main>
 </div>
