Draft of streaming Composer output to browser

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div id="loader"></div>
       <p id="status"></p>
       <div id="open"></div>
+      <pre id="output"></pre>
     </div>
   </main>
 </div>
