Make sure install errors are sent to the window

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -19,7 +19,7 @@
       <div id="loader"></div>
       <p id="status"></p>
       <div id="open"></div>
-      <pre id="cli-output"></pre>
+      <div id="cli-output"></div>
     </div>
   </main>
 </div>
