Use Svelte to render the UI

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,26 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Drupal CMS</title>
-  <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
-<body>
-<div class="cms-installer">
-  <header class="cms-installer__header">
-    <h1 class="cms-installer__heading">
-      <img src="./images/drupal-cms-logo.svg" alt="Drupal CMS" />
-    </h1>
-  </header>
-
-  <main class="cms-installer__wrapper">
-    <div class="cms-installer__main">
-      <h2 id="title"></h2>
-      <div id="loader"></div>
-      <p id="status"></p>
-      <div id="open"></div>
-      <div id="cli-output"></div>
-    </div>
-  </main>
-</div>
-</body>
+<body></body>
 <script type="module" src="./renderer.js"></script>
 </html>
